--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             width: 100%;
             height: 43%;
             background-image: linear-gradient(to bottom, 
-                            rgba(255, 0, 0, 0) 70%, 
-                            rgba(255, 0, 0, 0.8) 100%), 
+                            rgba(220, 38, 38, 0) 70%, 
+                            rgba(220, 38, 38, 0.8) 100%), 
                             url('1.jpg');
             background-size: cover;
             background-position: center;
@@ -550,10 +550,11 @@
         document.getElementById('save-contact').addEventListener('click', function(e) {
             e.preventDefault();
             
-            // vCard content with CPG and Cell phone number
+            // vCard content with proper N field format and correct structure
             const vCard = 
             `BEGIN:VCARD
 VERSION:3.0
+N:Urquizo;Randy;;;
 FN:Randy Urquizo
 TITLE:IT Consultant
 ORG:CPG Architects
