--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
             
             <div class="hero-card-header">
                 <div class="profile-image">
-                    <img src="spiderman 🕷️.jpg" alt="Randy Urquizo">
+                    <img src="Image (1).jpg" alt="Randy Urquizo">
                 </div>
                 <h1 class="name">Randy Urquizo</h1>
                 <p class="title">IT Consultant</p>
