--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                     <p class="mini-title">IT Consultant at CPG Architects</p>
                 </div>
                 <div class="mini-profile">
-                    <img src="spiderman 🕷️.jpg" alt="Randy Urquizo">
+                    <img src="Image (1).jpg" alt="Randy Urquizo">
                 </div>
             </div>
             
